[project]
name = "reconstruction"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.1.0",
    "accelerate==0.30.1",
    "bitsandbytes==0.45.0 ; sys_platform != 'darwin'",
    "datasets==2.19.1",
    "en-core-web-sm",
    "evaluate==0.4.3",
    "flair==0.15.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "neptune-client>=1.14.0.post2",
    "nltk==3.8.1",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "peft==0.14.0",
    "rouge-score==0.1.2",
    "scikit-learn==1.6.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "spacy==3.8.2",
    "torch==2.3.0",
    "torchmetrics>=1.9.0",
    "tqdm>=4.67.3",
    "transformers==4.44.2",
]

[project.scripts]
ghost-transform = "ghost.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ghost"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
